k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: text-analyzer
spec:
  replicas: 2
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: text-analyzer
  template:
    metadata:
      labels:
        app: text-analyzer
    spec:
      containers:
      - name: text-analyzer
        image: miraaqib786/text-analyzer:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        readinessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 20
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
